<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGP"
        style="@style/CardViewStyle"
        android:layout_height="110dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/generatedPasswordTextView"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:gravity="center"
            android:scrollHorizontally="true"
            android:text="@string/generated_password"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeTextType="uniform"
            tools:targetApi="o"
            tools:text="test" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="12dp"
        android:paddingBottom="5dp"

        android:text="@string/customize_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewGP" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/generator_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/length_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="19dp"

                android:text="@string/password_length"
                android:textColor="#FF65799B"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSLP"
                style="@style/CardViewStyle"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/startNumberTV"
                        style="@style/CardViewTextView"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/number_4">

                    </TextView>

                    <SeekBar
                        android:id="@+id/seekBarLengthBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="35dp"
                        android:layout_toStartOf="@id/endNumberTV"
                        android:layout_toEndOf="@id/startNumberTV"
                        android:max="64"
                        android:min="4"
                        android:progressBackgroundTint="?android:attr/textColor"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/endNumberTV"
                        style="@style/CardViewTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="end"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/number_64">

                    </TextView>
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewUppLet"
                style="@style/CardViewStyle"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/upp_let_tv"
                    style="@style/CardViewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uppercase_letters_a_z" />

                <CheckBox
                    android:id="@+id/upp_let_check_box"
                    style="@style/CardViewCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:checked="true" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLowLet"
                style="@style/CardViewStyle"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/let_low_tv"
                    style="@style/CardViewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowercase_letters_a_z" />

                <CheckBox
                    android:id="@+id/low_let_check_box"
                    style="@style/CardViewCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNumbers"
                style="@style/CardViewStyle"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/num_tv"
                    style="@style/CardViewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers_0_9" />

                <CheckBox
                    android:id="@+id/numbers_check_box"
                    style="@style/CardViewCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSymbols"
                style="@style/CardViewStyle"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/sym_tv"
                    style="@style/CardViewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbols" />

                <CheckBox
                    android:id="@+id/symbols_check_box"
                    style="@style/CardViewCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewUniqueCh"
                style="@style/CardViewStyle"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/unique_ch_tv"
                    style="@style/CardViewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unique_characters" />

                <CheckBox
                    android:id="@+id/unique_character_check_box"
                    style="@style/CardViewCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/generator_password_button"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/generate_password_btn_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/generate_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/copy_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/copy_button"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/copy_background"
        android:contentDescription="@string/copy_password"

        android:src="@drawable/content_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/generator_password_button" />


</androidx.constraintlayout.widget.ConstraintLayout>